<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/cover_image"></ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginTop="150dp"
                android:src="@drawable/profile" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_name"
                android:layout_marginBottom="7dp"
                android:textColor="#E4191818"
                android:textSize="25sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_bio"
                android:textColor="#C1191818"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_story"
                    android:backgroundTint="#B51094EA"
                    android:layout_marginRight="10dp">
                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:backgroundTint="#B51094EA"
                    android:layout_marginRight="10dp">
                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="..."
                    android:backgroundTint="#B51094EA"
                    android:padding="0dp">
                </Button>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/graduation"
                    android:layout_marginRight="10dp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/university"
                    android:textColor="#CE393737"
                    android:paddingTop="5dp"
                    android:textSize="15sp"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/graduation"
                    android:layout_marginRight="10dp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_school"
                    android:textColor="#CE393737"
                    android:paddingTop="5dp"
                    android:textSize="15sp"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/home"
                    android:layout_marginRight="15dp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live"
                    android:paddingTop="5dp"
                    android:textColor="#CE393737"
                    android:textSize="15sp"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/location"
                    android:layout_marginRight="15dp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/from"
                    android:textColor="#CE393737"
                    android:textSize="15sp"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/detail"
                    android:layout_marginRight="15dp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textColor="#CE393737"
                    android:textSize="15sp"></TextView>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E11094EA"
            android:layout_marginBottom="15dp"
            android:text="@string/edit_detail"></Button>
    </LinearLayout>
</ScrollView>
